Rm endpoint /api/members-per-postal-code
it was used in the legacy dashboard but it's not needed anymore.
